- Korrekturen in Anwenderdokumentation und Systemhandbuch - fatalen Fehler beim Erstellen der PDF des dritten Teilbelegs behoben

--- a/trunk/docs/beleg3/anwenderdokumentation.tex
+++ b/trunk/docs/beleg3/anwenderdokumentation.tex
@@ -41,8 +41,10 @@ Weiterhin ist der Administrator f"ur die Datenverwaltung und inbesondere f"ur di
 Was die Rechte eines Administrators betrifft so sind diese allein auf Grund seines Aufgabengebietes unbeschr"ankt, d.h. er kann alle Daten sehen, erstellen, bearbeiten und l"oschen.\\ 
 
 \end{enumerate}
+
+
 \section{Bedienungsanleitung}
-\subsection{Start der Anwenung}
+\subsection{Start der Anwendung}
 Um den Literaturmanager zu starten muss man einen Web-Browser (hier Firefox 1.5.0.4) starten und die passende Internet-Adresse in das URL-Feld eintragen. Die URL kann man beim Administrator erfragen, da er den Web-Server zuvor konfiguriert.
 \subsection{Die Hauptseite}
 Hat man die richtige Web-Adresse eingegeben, so l"adt der Browser folgende Seite:\\
@@ -71,7 +73,7 @@ Wir Loggen uns mit dem Namen 'Lazhur' und dem Passwort 'tescht' ein:\\
 \includegraphics[scale=1.0]{login}\\
 \end{center}
 War die Anmeldung erfolgreich so erscheint folgende Anzeige und man ist als Mitglied eingeloggt:\\
-\includegraphics[scale=0.8]{login1}\\
+\includegraphics[scale=0.8]{login1}
 
 \subsection{Wie finde ich eine Literatur?}
 Um Informationen zu einem Literaturtitel zu erhalten bietet es sich an die Suchfunktion des Literaturmanagers zu nutzen. Hierzu kommen wir kurz auf das Bild des Hauptbildschirm weiter oben zur"uck:\\
@@ -88,7 +90,7 @@ Klickt in dem Suchsegments auf den Link 'Erweiterte Suche' so erscheint folgende
 Die Suchfunktionen richten sich nunmehr auf spezielle Informationen eines Buches, was sich bei sehr gro"sen Datenbest"anden, die sich im Lauf der Zeit anreichern, in Form einer gr"o"seren "Ubersichtlichkeit der Suchtreffer auszahlen k"onnte.\\
 Im Feld 'Titel' gibt man einfach einen Literatur-Titel , ein Wort aus dem Titel oder sogar nur eine kurze Zeichenkette wie 'Algo' ein.\\
 Im Feld 'Autor' funktioniert es genau so, einfach einen Autor oder auch nur Teile seines Namens eingeben und den Button 'Suche' dr"ucken.\\
-Die Volltextsuche sucht, "ahnlich wie die 'normale' Suche auf dem Hauptformular in allen Informationen eines Literaturtitels mit Ausnahme der Kommentare.\\
+Die Volltextsuche sucht, "ahnlich wie die 'normale' Suche auf dem Hauptformular in allen Informationen eines Literaturtitels mit Ausnahme der Kommentare.
 
 \subsection{Wie kann ich eine neue Literatur anlegen?}
 Kommen wir nun vom Recherchieren zum bearbeiten und Pflegen der Literaturverwaltung.\\
@@ -102,7 +104,7 @@ Klickt man nun auf den Button 'Literatur hinzuf"ugen' erscheint folgendes Formul
 \includegraphics[scale=0.8]{lit_ins1}\\
 Will man nun einen Eintrag in das Literaturverzeichnis machen, so muss man alle Felder ihrer Beschreibung gem"a"s auszuf"ullen und den Button '"Ubernehmen' dr"ucken.\\
 F"ur einen von der Anwendung akzeptierten Eintrag sind die Felder 'Titel' und 'Autor' zwingend auszuf"ullen, sonst erscheint folgende Fehlermeldung:\\
-\includegraphics[scale=0.8]{err}\\
+\includegraphics[scale=0.8]{err}
 
 \subsection{Literatur mit BibTeX anlegen}
 W"ahlt man statt dem Web-Formular zum Literatur-Import den Import via BibTeX, so sieht man sich folgendem Formular konfrontiert:\\
@@ -118,7 +120,7 @@ Folgendes Bild zeigt ein Beispiel:\\
 \includegraphics[scale=0.8]{import2}\\
 Nach der Eingabe der Beschreibung muss man noch den Button 'Importieren' dr"ucken und ein neues Buch mit Titel 'BibTeX kurzgefasst' wurde in die Literaturverwaltung aufgenommen.\\
 Der efolgreiche Import wird durch folgende Anzeige signalisiert:\\
-\includegraphics[scale=0.8]{import_succ}\\
+\includegraphics[scale=0.8]{import_succ}
 
 \subsection{Wie bearbeite ich eine Literatur?}
 M"ochte man einen Literatureintrag "andern, etwa weil man einen Fehler bei der Erstellung gemacht hat oder um eine Aktualisierung vorzunehmen, muss man sich zun"achst die Literaturtabelle anzeigen lassen, danach den zu "andernden Eintrag ausw"ahlen und den Button 'Bearbeiten' dr"ucken.\\
@@ -127,14 +129,14 @@ Anschlie"send erscheint ein Formular "ahnlich dem Formular 'Literatur erstellen'
 Im folgenden Bild wollen wir eine "Anderung an unserem erstellten Literatur-Titel 'BibTeX kurzgefasst' vornehmen, wir wollen die ISBN von 9-99999-999-9 in 0-00000-000-0 "andern und Verlag in SwP umbenennen:\\
 \includegraphics[scale=0.8]{bearb2}\\
 Anschlie"send noch '"Ubernehmen' dr"ucken und unsere Literaturdaten wurden ge"andert. Best"atigt wird die "Anderung durch folgende Meldung:\\
-\includegraphics[scale=0.8]{bearb3}\\
+\includegraphics[scale=0.8]{bearb3}
 
 \subsection{Wie l"osche ich eine Literatur?}
 Ist es n"otig einen Literatureintrag zu l"oschen, so w"ahlt man ihn wie auch beim 'Bearbeiten' in der Literaturliste aus, l"asst sich also die betreffenden Literaturdetails anzeigen, und bet"atigt den Button 'L"oschen':\\
 \includegraphics[scale=0.8]{del_lit}\\
 Daraufhin erscheint die Aufforderung den L"oschvorgang zu best"atigen. Sollten man es sich anders "uberlegt haben, so bet"atigt man NICHT den Best"atigen-Button sondern verl"asst "uber das seitliche Men"u oder den Zurück-Knopf des Browsers den L"oschprozess.\\
 Sollte man sich sicher sein, dass man den Eintrag l"oschen will, so klickt man auf den Button 'Best"atigen':\\
-\includegraphics[scale=0.8]{sure}\\
+\includegraphics[scale=0.8]{sure}
 
 
 \subsection{Wie kommentiere ich einen Literatureintrag?}
@@ -145,7 +147,7 @@ Dort findet man ein Textfeld worin man seinen Kommentar verfassen kann, anschlie
 \includegraphics[scale=0.8]{comment1}\\
 Auch hier erfolgt eine visuelle Best"atigung "uber die erfolgreiche Abgabe eines Kommentars:
 \includegraphics[scale=0.8]{comment2}\\
-Mit dem Button 'Zur"uck' gelangt man zu den Literaturdetails des gerade kommentierten Titels zur"uck.\\
+Mit dem Button 'Zur"uck' gelangt man zu den Literaturdetails des gerade kommentierten Titels zur"uck.
 
 \subsection{Wie "andere ich einen Kommentar?}
 Will man einen seiner Kommentare zu einem Literaturtitel "andern, muss man den gew"unschten Titel in der Literaturliste ausw"ahlen um sich die Details anzeigen zu lassen.\\
@@ -189,7 +191,7 @@ dr"ucken. F"ur einen von der Anwendung akzeptierten Eintrag m"ussen alle Felder 
 erscheinen: (Zur Demonstration sind alle Felder leer, um alle Fehlermeldungen anzuzeigen)\\
 \includegraphics[scale=0.5]{nutzeranl3}\\
 Wenn man die Felder korrekt ausgef"ullt hat und der Nutzer angelegt werden konnte kommt folgende Meldung:\\
-\includegraphics[scale=0.5]{nutzeranl4}\\
+\includegraphics[scale=0.5]{nutzeranl4}
 
 \subsection{Wie bearbeite ich einen Nutzer?}
 Um einen bereits angelegten Nutzer zu bearbeiten, klicken wir zun"achst im Segment 'Navigation' auf den Punkt 'Nutzer', daraufhin erscheint das Fenster 
@@ -199,7 +201,7 @@ Wenn man zum Beispiel den Nutzer 'testnutzer' bearbeiten will, so klickt man auf
 Das schon aus dem Abschnitt 'Wie lege ich einen Nutzer an?' bekannte Formular erscheint und man kann s"amtliche Daten "andern.\\
 \includegraphics[scale=0.5]{nutzerbea2}\\
 Wenn der Nutzer erfolgreich bearbeitet wurde, erscheint folgende Nachricht:\\
-\includegraphics[scale=0.5]{nutzerbea3}\\
+\includegraphics[scale=0.5]{nutzerbea3}
 
 \subsection{Wie l"osche ich einen Nutzer?}  
 Um einen Nutzer zu l"oschen, klicken wir zun"achst im Segment 'Navigation' auf den Punkt 'Nutzer', daraufhin erscheint das Fenster 
@@ -209,13 +211,11 @@ Wenn man zum Beispiel den Nutzer 'testnutzer' l"oschen will, so klickt man auf d
 Es erscheint eine Frage, ob sie den Nutzer wirklich entfernen wollen:\\
 \includegraphics[scale=0.5]{nutzerloe2}\\
 Wenn der Nutzer entfernt wurde, erscheint folgende Nachricht:\\
-\includegraphics[scale=0.5]{nutzerloe3}\\
+\includegraphics[scale=0.5]{nutzerloe3}
 
 \section{Helpsystem}
 Die Nachrichten beim Anlegen, Editieren und L"oschen von Datenbest"anden sind als Hilfestellung v"ollig ausreichend.\\
-Ausserdem sind die Fehlermeldungen, die bei unzureichender Eingabe erscheinen, aussagekr"aftig genug.\\
-
-
+Ausserdem sind die Fehlermeldungen, die bei unzureichender Eingabe erscheinen, aussagekr"aftig genug.
 
 
 
