- Raumnummer im Protokoll vom 07.06.2006 korrigiert - HTML4-TBody-Fehler im Zusammenhang mit leeren Suchergebnisssen behoben - "BibTeX-ISBN-Import-Bug" behoben - Überprüfung auf vorhandene PHP-MySQL-Module hinzugefügt

--- a/trunk/docs/beleg3/anwenderdokumentation.tex
+++ b/trunk/docs/beleg3/anwenderdokumentation.tex
@@ -122,6 +122,8 @@ Nach der Eingabe der Beschreibung muss man noch den Button 'Importieren' dr"ucke
 Der efolgreiche Import wird durch folgende Anzeige signalisiert:\\
 \includegraphics[scale=0.8]{import_succ}
 
+Beim Einfügen von BibTeX-Daten ist darauf zu achten, dass nur je ein Attribut auf einer Zeile steht. Bei mehr als einem Attribut kann nicht garantiert werden, dass eine korrekte Trennung der einzelnen Attribute durchgeführt wird. Außerdem sollte direkte Einbettung von LaTeX-Befehle vermieden werden. Sollte dies trotzdem einmal passieren, muss der Literatureintrag nachträglich bearbeitet werden.
+
 \subsection{Wie bearbeite ich eine Literatur?}
 M"ochte man einen Literatureintrag "andern, etwa weil man einen Fehler bei der Erstellung gemacht hat oder um eine Aktualisierung vorzunehmen, muss man sich zun"achst die Literaturtabelle anzeigen lassen, danach den zu "andernden Eintrag ausw"ahlen und den Button 'Bearbeiten' dr"ucken.\\
 \includegraphics[scale=0.8]{bearb1}\\
@@ -216,8 +218,3 @@ Wenn der Nutzer entfernt wurde, erscheint folgende Nachricht:\\
 \section{Helpsystem}
 Die Nachrichten beim Anlegen, Editieren und L"oschen von Datenbest"anden sind als Hilfestellung v"ollig ausreichend.\\
 Ausserdem sind die Fehlermeldungen, die bei unzureichender Eingabe erscheinen, aussagekr"aftig genug.
-
-
-
-
-
