--- a/trunk/docs/beleg3/arbeitsaufgaben.tex
+++ b/trunk/docs/beleg3/arbeitsaufgaben.tex
@@ -303,7 +303,7 @@
 			\end{itemize}
 			\subsection{Nächste Pflichtkonsultation mit Betreuer}
 			\begin{itemize}
-			\item Die nächste Pflichtkonsultation mit Herrn Rentzsch findet am {\em 13.06.2006 um 13:10 Uhr im Raum 			1/B317 } statt.
+			\item Die nächste Pflichtkonsultation mit Herrn Rentzsch findet am {\em 13.06.2006 um 13:10 Uhr im Raum 			1/344 } statt.
 			\end{itemize}
 			Chemnitz, 07.06.2006
 			\begin{itemize}
