--- a/trunk/docs/beleg3/tests.tex
+++ b/trunk/docs/beleg3/tests.tex
@@ -8,7 +8,7 @@
 \item Eingabedaten:\\
 	test.php wird aufgerufen. Sonstige Eingaben werden fest im Code der Tests durchgeführt.
 \item Erwartete Ereignisse:\\
-	Alle Tests liefern "OK" zurück
+	Alle Tests liefern ``OK'' zurück
 \item Systemzustand nach Test:\\
 	Unverändert, wie vor dem Test.
 \end{enumerate}
