- Zeilendreher in userlist.php korrigiert - "vollkommen frei" -> "frei" in Systemhandbuch (was war daran überhaupt falsch?)

--- a/trunk/docs/beleg3/systemhandbuch.tex
+++ b/trunk/docs/beleg3/systemhandbuch.tex
@@ -1,6 +1,6 @@
 \chapter{Systemhandbuch}
 \section{Installationsanleitung}
-Das System ist vollkommen frei und kostenlos "uber das Internet von \pdfurl{http://liman.berlios.de/} 
+Das System ist frei und kostenlos "uber das Internet von \pdfurl{http://liman.berlios.de/} 
 bzw. direkt der 
 Downloadseite \pdfurl{http://developer.berlios.de/project/showfiles.php?group\_id=6441} 
 zu beziehen.
